# socib-shoreline-extraction

./: .gitignore  CITATION.cff  Dockerfile  LICENSE  README.md  ai4-metadata.yml  deepaas.conf  pyproject.toml  requirements-test.txt  requirements.txt  tox.ini
.sqa/: config.yml  docker-compose.yml
notebooks/: 01_Shoreline_Extraction_Tutorial.ipynb  01_api_tutorial.ipynb
socib_shoreline_extraction/: api.py  config.py  schemas.py
socib_shoreline_extraction/app/: predictor.py
socib_shoreline_extraction/app/data_processing/: cnn_formes.py  crop.py  obtain_shoreline.py  patch_reconstructor.py  patchify.py
socib_shoreline_extraction/app/model/: base_model.py  cnn_model.py  deeplab.py
socib_shoreline_identification/: api.py  config.py  misc.py
socib_shoreline_identification/app/: predictor.py
socib_shoreline_identification/app/data_processing/: cnn_formes.py  crop.py  dataset_preprocessor.py  obtain_shoreline.py  patch_reconstructor.py  patchify.py
socib_shoreline_identification/app/model/: base_model.py  cnn_model.py  deeplab.py
tests/: conftest.py  test_api.py
