[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ai4os_demo_app"
version = "0.1.0"
authors = [{ name = "Ignacio Heredia", email = "iheredia@ifca.unican.es" }]
description = "A demo application to test (eg. DEEPaaS testing). Does not contain any AI code."
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT",
]
dynamic = ["dependencies"]

[project.urls]
"Homepage" = "https://github.com/ai4os-hub/ai4os-demo-app"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }


[tool.setuptools.packages.find]
include = ["ai4os_demo_app"]

[project.entry-points."deepaas.v2.model"]
ai4os_demo_app = "ai4os_demo_app.api"
